Bug 1607221 - Make mTimeouts protected by a lock r=dragana

Differential Revision: https://phabricator.services.mozilla.com/D68018

--HG--
extra : moz-landing-system : lando